3/style3.css
/* ... */
/* .language::after {
  content: ">";
  color: #ffffff;
  margin-left: 10px;
} */

.language .popup {
  display: none;
  position: absolute;
  top: 32px;
  width: 100%;
  left: 0;
  z-index: 10;
  border: 1px solid rgba(255, 255, 255, 0.5);
  border-radius: 16px;
}

.language.open .popup {
  display: block;
}

.language .popup div {
  text-align: center;
  color: #ffffff;
  padding: 9px;
}

.language .popup div a {
  position: relative;
  color: #ffffff;
}

.language .popup div a::after {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  width: 0;
  height: 1px;
  background-color: #ffffff;
  transition: width 0.3s ease-out;
}

.language .popup div a:hover::after,
.language .popup div a:focus::after {
  width: 100%;
}

.main {
  background-color: #9a9a9a;
  position: relative;
  overflow: hidden;
}

.main__img {
  background-image: url(./img/img1.jpeg);
  background-size: cover;
  background-repeat: no-repeat;
  background-position: -120px 0px;
  display: flex;
  justify-content: center;
  position: absolute;
  width: 752px;
  height: 749px;
  right: -257px;
  bottom: -31px;
  overflow: hidden;
  border-radius: 50%;
  z-index: 100;
}

.main__img img {
  height: 100%;
}

.main__white_square {
  background-color: #ffffff;
  position: absolute;
  width: 788px;
  height: 775px;
  right: -270px;
  bottom: -40px;
  border-radius: 50%;
  z-index: 90;
}

.main__purple_square {
  background-color: #ff8811;
  position: absolute;
  width: 784px;
  height: 780px;
  right: -240px;
  bottom: -40px;
  border-radius: 50%;
  z-index: 80;
}

.main-title {
  width: 550px;
  margin-top: 65px;
  margin-bottom: 125px;
  display: flex;
  flex-direction: column;
  align-items: center;
  overflow: hidden;
}

.main-title__header {
  color: #fefefe;
  font-size: 24px;
  margin-bottom: 30px;
}

.main-title__first {
  text-align: center;
  width: 420px;
  line-height: 1;
  color: #ffffff;
  font-size: 72px;
  font-weight: 900;
  text-transform: uppercase;
  margin-bottom: 56px;
}

.main-title .text1 {
  opacity: 0.8;
  line-height: 21px;
  color: #ffffff;
  font-size: 16px;
  text-align: center;
  margin-bottom: 40px;
}

.main-title .text2 {
  opacity: 0.8;
  line-height: 21px;
  color: #ffffff;
  font-size: 16px;
  text-align: center;
  margin-bottom: 70px;
}

.main__btn {
  padding: 9px 75px;
  height: 36px;
  color: #ffffff;
  font-size: 17px;
  line-height: 1;
  background-color: #f98511;
  border-radius: 18px;
  margin-bottom: 63px;
  cursor: pointer;
}

.main__btn:hover {
  background-color: #a25406;
  transition: 0.3s;
  color: #ffffff;
}

.main-title__link1_text {
  width: 442px;
  position: relative;
  padding-bottom: 2px;
  opacity: 0.8;
  color: #ffffff;
  font-size: 18px;
  text-align: center;
}

.main-title__link1 {
  position: relative;
  padding-bottom: 2px;
  opacity: 0.8;
  color: #ffffff;
  font-size: 18px;
  text-align: center;
}

.main-title__link1:hover {
  color: #ffffff;
}

.main-title__link1::after {
  content: "";
  display: block;
  position: absolute;
  left: 0;
  /* transform: translateX(-50%); */
  width: 0;
  height: 1px;
  background-color: #ffffff;
  transition: width 0.3s ease-out;
}

.main-title__link1:hover::after,
.main-title__link1:focus::after {
  width: 100%;
}

/* user */

.user {
  margin-top: 17px;
  margin-bottom: 13px;
  background-color: #f8f8f8;
}

.user__container {
  margin-top: 63px;
  margin-bottom: 75px;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 100%;
}

.user .right {
  width: 391px;
  text-align: center;
}

.right .right__title {
  color: #161515;
  font-size: 48px;
}

.left__count {
  width: 645px;
  display: flex;
}

.left__count .left__count_wrap {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.left__count .left__count_number {
  display: flex;
  align-items: center;
  justify-content: center;
  margin-bottom: 16px;
  width: 101px;
  height: 101px;
  text-align: center;
  background-color: #bababa;
  border-radius: 50%;
  color: #ffffff;
  font-weight: 900;
  font-size: 90px;
}

.left__count .left__count_description {
  opacity: 0.7019607843137254;
  color: #161515;
  font-size: 14px;
  line-height: 24px;
  text-align: center;
}

/* /user */

/* work */

.work {
  background-color: #f8f8f8;
  margin-top: 13px;
  margin-bottom: 13px;
}

.work__wrap {
  display: flex;
  flex-direction: column;
  margin-top: 90px;
  margin-bottom: 90px;
}

.work .title {
  align-self: center;
  color: #161515;
  font-size: 48px;
  width: 707px;
  text-align: center;
  margin-bottom: 90px;
}

.work .work__container {
  width: 100%;
  display: flex;
  flex-wrap: wrap;
  column-gap: 10px;
  row-gap: 10px;
}

.container__items {
  display: flex;
  align-items: center;
  border: 1px solid #adadad;
}

.container__items .container__item {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 13px 20px 13px 50px;
  /* width: 101px; */
  /* height: 101px; */
  text-align: center;
  /* background-color: #ffffff; */
  /* border-radius: 50%; */
  color: #fda956;
  font-weight: 900;
  font-size: 90px;
  z-index: 10;
}

.container__items .container__item::after {
  content: "";
  position: absolute;
  right: 20px;
  width: 50px;
  height: 100px;
  /* border: 1px solid red; */
  border-radius: 100% 0 0 100% / 50% 0 0 50%;
  background: #ffffff;
  z-index: -1;
}

.container__text {
  opacity: 0.7019607843137254;
  color: #161515;
  font-family: "Open Sans", sans-serif;
  font-size: 14px;
  margin-right: 35px;
}

.container__items:nth-child(1) {
  width: 383px;
}

.container__items:nth-child(2) {
  width: 292px;
}

.container__items:nth-child(3) {
  width: 445px;
}

.container__items:nth-child(4) {
  width: 539px;
}

.container__items:nth-child(5) {
  width: 591px;
}

.container__items:nth-child(6) {
  width: 600px;
  height: 167px;
}

.container__items:nth-child(7) {
  width: 530px;
  height: 167px;
}
/* ... */

